semester_1/netSec/TP3/TP3/exercise-3/exports/evidence/gwcloudA_iptables.rules
# Generated by iptables-save v1.8.11 (nf_tables) on Wed Nov 26 21:51:41 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i tun0 -j ACCEPT
-A FORWARD -s 10.8.0.20/32 -d 10.12.0.30/32 -j DROP
-A FORWARD -i tun0 -j ACCEPT
-A FORWARD -i eth1 -o tun0 -j ACCEPT
COMMIT
# Completed on Wed Nov 26 21:51:41 2025
# Generated by iptables-save v1.8.11 (nf_tables) on Wed Nov 26 21:51:41 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A POSTROUTING -s 10.12.0.0/16 -o eth1 -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -o eth1 -j MASQUERADE
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:39489
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:40043
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 39489 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 40043 -j SNAT --to-source :53
COMMIT
# Completed on Wed Nov 26 21:51:41 2025
